--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1>Welcome {{name}}</h1>
+<h1 class="text-2xl font-medium">Welcome {{name}}</h1>
 <p>This is the home page of our site.</p>
 
 <p> Page Vitits: {{page_visit}}</p>
