--- a/src/templates/base/css.html
+++ b/src/templates/base/css.html
@@ -1,1 +1,3 @@
-<link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'vendors/flowbite.min.css' %}">
