--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -11,4 +11,6 @@
 <p> Total Vitits: {{total_page_visits}}</p>
 <p> Percentage of Visits: {{percentage}}%<p>
 
+{% include "snippets/welcome-user-msg.html" %}
+
 {% endblock %}
