--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 {% include "nav/navbar.html" %}
+{% include 'base/messages.html' with messages=messages %}
     {% block content %}
     <h1>Welcome to My Site</h1>
     {% endblock %}
